--- a/04-08.html
+++ b/04-08.html
@@ -51,7 +51,7 @@
                 var MDHW = parseInt($("#newDiv").css("height"));
                 if (MDHW >= 20) {
                     MDHW-=25;
-                    $("#newDiv").css("height", MOHW);
+                    $("#newDiv").css("height", MDHW);
                     $("#newDiv").css("width", MDHM);
                 }
                 else {
